--- a/_posts/2019-8-21-haskell.markdown
+++ b/_posts/2019-8-21-haskell.markdown
@@ -4182,3 +4182,128 @@ test = do
 
 ---
 <br/>
+
+## Monad转换器
+
+先介绍一下Identity。Identity是一个没有任何行为的类型，实现了Monad类型类，所以不管是在Monad转器中还是在函数需要Monad参数时都可以使用此类型，它的定义为：
+
+```haskell
+newtype Identity a = Identity { runIdentity :: a }
+```
+
+Identity对应的Monad转化器为IdentityT，其定义为：
+
+```haskell
+-- 自己构造的Identity的Monad转化器
+newtype IdentityT m a = IdentityT { runIdentityT :: m a }
+-- 要将IdentityT m实现Monad类型类，根据Monad类型类的实现
+-- class  Monad m  where
+--     (>>=)  :: m a -> (a -> m b) -> m b
+--     return :: a -> m a
+-- 此时的IdentityT m实现Monad类型类的(>>=)和return类型为：
+-- return :: a -> IdentityT m a
+-- (>>=) :: IdentityT m a -> (a -> IdentityT m b) -> IdentityT m b
+instance (Monad m) => Monad (IdentityT m) where
+    return a = IdentityT $ return a
+    itm >>= k = IdentityT $ do
+        a <- runIdentityT itm -- runIdentityT itm得到的类型为IdentityT m a中的m，所以a的类型就是a
+        runIdentityT (k a) -- k a的类型为IdentityT m b，所以这个do语句返回的类型为m b, 而最终>>=需要返回 IdentityT m b，所以最外层需要加一个IdentityT构造函数
+
+-- 这两个Applicative和Functor实现必不可少，不然会报如下错误：
+-- • Could not deduce (Applicative (IdentityT m))
+--     arising from the superclasses of an instance declaration
+instance (Monad m) => Applicative (IdentityT m) where
+            pure = return
+            (<*>) = ap
+instance (Monad m) => Functor (IdentityT m) where
+            fmap = liftM
+```
+
+转化器的作用是组合使用各种不同的Monad，例如刚刚定义的IdentityT转化器，可以组合Maybe来使用：
+
+``` haskell
+-- 使用IdentityT的例子
+imi :: IdentityT Maybe Int
+imi = IdentityT $ Just 10
+imi2 :: IdentityT Maybe Int
+imi2 = (>>=) imi $  \x -> IdentityT $ Just (x+10)
+```
+
+这时只是举例说明转化器的组合多种Monad用法，定义的Identity Maybe Int完全与Maybe Int等价，即这两种类型是同构的。
+
+我们再来看看如何使用StateT和MaybeT来处理栈pop操作中，栈为空的异常情况：
+
+```haskell
+-- 使用StateT和Maybe来处理push和pop
+-- newtype StateT s (m :: Type -> Type) a
+-- 构造函数为：StateT (s -> m (a, s))
+pushSM :: Int -> StateT [Int] Maybe ()
+pushSM n = StateT $ \xs -> Just ((), n:xs)
+
+popSM :: StateT [Int] Maybe Int
+popSM = StateT $ \case
+    [] -> Nothing
+    x:xs -> Just (x, xs)
+-- *Main> runStateT popSM []
+-- Nothing
+
+-- 使用MaybeT和State来处理push和pop
+-- newtype MaybeT m a
+-- MaybeT
+--     runMaybeT :: m (Maybe a)
+pushMS :: Int -> MaybeT (State [Int]) ()
+pushMS n = MaybeT $ state $ \xs -> (Just (), n:xs)
+
+popMS :: MaybeT (State [Int]) Int
+popMS = MaybeT $ state $ \case
+    [] -> (Nothing,  [])
+    x:xs -> (Just x, xs)
+-- *Main> runState (runMaybeT popMS  ) []
+-- (Nothing,[])
+```
+
+从两个例子的结果上可以看出使用MaybeT State组合时，如果出错，可以保留栈的状态。
+
+再来看一下不使用转换器，而使用State和Maybe Int组合来实现的pop：
+
+```haskell
+-- 使用State和Maybe Int组合来处理问题
+pushSM' :: Int -> State [Int] (Maybe ())
+pushSM' n = state $ \xs -> (Just (), n:xs)
+popSM' :: State [Int] (Maybe Int)
+popSM' = state $ \case
+            [] -> (Nothing, [])
+            x:xs -> (Just x, xs)
+-- *Main> runState popSM' []
+-- (Nothing,[])
+
+-- 比较组合与转换器之间在处理上的区别
+-- 可以看出由于转换器在do中直接取出的类型就是Int，所以不需要进行一次模式匹配
+tSM' :: State [Int] (Maybe Int)
+tSM' = do
+    pushSM' 5
+    a <- popSM'
+    case a of
+        Nothing -> return Nothing
+        Just x -> return $ Just (x+1)
+
+tMS :: MaybeT (State [Int]) Int
+tMS = do
+    pushMS 5
+    a <- popMS
+    return (a+1)
+```
+
+### Monad转换器的组合顺序 (略)
+
+### lift和liftIO （略）
+
+### 简易Monad编译器（略）
+
+### 语法分析Monad组合子（略）
+
+---
+<br/>
+
+## QuickCheck简介
+
