--- a/_posts/2020-07-05-tls.markdown
+++ b/_posts/2020-07-05-tls.markdown
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: post_n
 title: TLS协议深入
 date: 2020-07-05
 categories:
@@ -19,57 +19,69 @@ center{
 }
 </style>
 
-## 引子
 
-<br/>
+[TLS(Transport Layer Security)](https://en.wikipedia.org/wiki/Transport_Layer_Security)协议是位于传输层(TCP)与应用层(HTTP/WebSocket)之间的协议，增加了数据传输之间的安全性及完整性(HTTPS/WSS)。
 
-[TCP的三次握手](/2017/11/14/tcp-ip/)想必大家都很熟悉；而TLS的交互流程，对于下面一张图，应该也不陌生。
+TLS的前身SSL(Secure Sockets Layer)是由网景开发，应用于HTTPS中，前后经历了SSL 1.0、SSL 2.0、SSL 3.0三个版本(目前均已废弃)。
+
+1999年IETF发布了标准化后的SSL协议，称之为TLS 1.0。TLS 1.0和TSL 1.1于2020年[废弃](https://arstechnica.com/gadgets/2018/10/browser-vendors-unite-to-end-support-for-20-year-old-tls-1-0/)，目前最新版本的TLS 3.0发布于2018年8月。
+
+本文介绍的内容主要以TLS 2.0为主，在最后简单介绍TLS 3.0的改进以及实现原理概要。
+
+
+## 概述
+
+TLS的交互流程发生于[TCP的三次握手](/2017/11/14/tcp-ip/)之后，典型的流程(TLS 1.2)如下：
 
 ![TLS流程](/assets/images/tls-flow.png)
 
-从TCP三次握手成功后，还会有两次的往返交互来达成一致，随后才开始使用对称加密的方式来传输应用层信息。
+从TCP三次握手成功后，还会有两次的往返交互来达成一致，随后才开始使用对称加密的方式来传输应用层信息：
 
-就图上的流程一般出现在TLS v1.2介绍中：
+1. 客户端会发送ClientHello消息包，说明自己的TLS版本、支持的加密套件等信息；
 
-1 客户端会发送ClientHello消息包，说明自己的TLS版本、支持的加密套件等信息
+2. 服务端发送ServerHello消息包，确认选定的加密套件，是否支持压缩等信息，并在Certificate中添加自己的证书链信息；
 
-2 服务端发送ServerHello消息包，确认选定的加密套件，是否支持压缩等等信息，并在Certificate中添加自己的证书链信息。
+3. 客户端收到证书链后校验证书的有效性，随后生成主密钥，并将所需要的信息通过ClientKeyExchange发送给服务端(主密钥协商过程见[密钥交换协议](#密钥交换协议)，并声明后续所有的消息都是加密后的内容(ChangeCipherSpec)；至此Client端已经完成协商，可以开始发送应用层数据；
 
-3 客户端收到证书链后校验证书的有效性，随后生成密钥，使用证书对应的公钥加密后发送给服务端，并声明后续所有的消息都是加密后的内容。
+4. 服务端收到客户端的信息，生成主密钥，也声明后续的消息都为加密后的内容(ChangeCipherSpec)；
 
-4 服务端收到密钥后用私钥解开，也声明后续的消息都为加密后的内容。
+5. TLS协商结束，开始加密传输应用层消息。
 
-5 开始加密传输应用层消息。
+以上这些信息使得对TLS有一些直观的印象，但还会有很多的问题浮现出来，例如这些交互包里都包括哪些内容呢，加密套件具体表示什么？
 
-这些信息使你对TLS有一些直观的印象，但还会有很多的问题浮现出来，例如这些交互包里都包括哪些内容呢，加密套件是指哪些内容？
-
-如果你抓包确认一下以上流程，会发现大部分情况下我们抓到的TLS的交互流程与这张图上还是有一些区别的，这其中的区别又有什么说道呢？
+如果抓包确认一下以上流程，会发现大部分情况下我们抓到的TLS的交互流程与这张图上还是有一些区别的，这其中的区别又有什么说道呢？
 
 ![](/assets/images/tls-my-flow.png)
 <center>以上抓包的流程中多了Server Key Exchange和New Session Ticket这两个消息包</center>
 
-不如先从解析每一个包的内容说起。
-
+接下来从各个方面来深入理解一下TLS的握手过程。
 
 ## 密钥交换协议
 
 我们知道TLS握手的目的之一是协商一个对称密钥。基于非对称加密以及证书机制，我们可以很容易想到如下流程：
 
-1. 客户端发起请求
-2. 服务端回复自己的证书，
-3. 客户端使用证书链机制验证有效性，生成对称密钥S，使用证书中包含有公钥的加密，发送给服务端
-4. 服务端收到密文后使用私钥解密，得到密钥S，至此两端就可以使用S进行对称加密传输了
+1. 客户端发起请求；
 
-这种方式可以保证密钥S只有通信双方知道，在私钥不泄漏的情况下，第三方无法解密内容。但如果私钥泄漏了呢？
+2. 服务端回复自己的证书；
 
-一旦私钥泄漏，之前的转输内容将全部被解密，这是由于私钥参与了密钥交换，不满足前向安全性（Forward Secrecy）。
+3. 客户端使用证书链机制验证有效性，生成对称密钥S，使用证书中包含有公钥的加密，发送给服务端；
 
+4. 服务端收到密文后使用私钥解密，得到密钥S，至此两端就可以使用S进行对称加密传输了。
 
-为了解决这个问题，就出现了DH密钥交换协议（Diffie–Hellman key exchange），其流程如下：
+这种方式可以保证密钥S只有通信双方知道，在私钥不泄漏的情况下，第三方无法解密内容。
 
-1. 客户端发起请求
+但如果私钥泄漏了呢？一旦私钥泄漏，之前的转输内容将全部被解密，这是由于私钥参与了密钥交换，不满足[前向安全性(Forward Secrecy)](https://zh.wikipedia.org/wiki/%E5%89%8D%E5%90%91%E4%BF%9D%E5%AF%86)。
+
+### DH密钥交换
+
+为了解决这个问题，产生了DH密钥交换协议(Diffie–Hellman key exchange)，其流程如下：
+
+1. 客户端发起请求；
+
 2. 服务端生成一个私钥a，并选定p,g，计算A = g^a mod p，发送p,g,A
+
 3. 客户端生成一个私钥b, 计算B = g^b mod p，主密钥K = A^b mod p，发送B;
+
 4. 服务端生成主密钥K = B^a mod p
 
 这样双方即协商生成了主密钥K，这是基于这样一个等式的 (g^a)^b mod p = (g^b)^a mod p，证明从略
@@ -833,7 +845,7 @@ openssl x509 -text -inform DER -in baidu.com.cer -out baidu.com.pem
 
 ### 证书链的校验
 
-![](assets/images/Chain_of_trust.svg)
+![](/assets/images/Chain_of_trust.svg)
 
 如图中所示，从终端用户证书开始，取出证书的签名，使用上一级证书中的公钥解密得到摘要，将终端用户证书的内容按摘要算法(sha256等)获得的摘要与签名解密的摘要对比，如果一致，即说明内容没有被篡改；
 依次再取出第二级的证书使用再上一级的公钥解密，并验证摘要；
