--- a/_posts/2019-05-06-kyushu.markdown
+++ b/_posts/2019-05-06-kyushu.markdown
@@ -6,17 +6,17 @@ categories:
   - Journey
   - Gallery
 description: 虽然提前半年定了去日本的便宜机票，但我们俩深知彼此都是较懒的人，攻略不可能做得如此的详尽。而且我们去的是九州，远离于东京、京都等大都市，必然无法详尽浏览过多的知名景点。所以我们早早的就立下了一个这样的FLAG，以体验异国风情为主，以浏览景点为辅，做为第一次去日本（也是第一次出国）的基调，轻松自由行。
-image: /assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg
-image-sm: /assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg
+image: "{{ site.baseurl }}/assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg"
+image-sm: "{{ site.baseurl }}/assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg"
 thumbs:
-- /assets/images/sina/39310800dd3819858abbc11f481ec540.jpg
-- /assets/images/sina/b5bc104d42e47f29ad3486aee187de01.jpg
-- /assets/images/sina/936e48990be239165c241b11217765c5.jpg
-- /assets/images/sina/12426e1b4d14c3738dec1fec0a67f365.jpg
-- /assets/images/sina/38fdfe04165f32abff476f9458e67b8f.jpg
-- /assets/images/sina/ca360212266c7b6bd34e34cdbe83e822.jpg
-- /assets/images/sina/c9243e27e70978ab4689e7f7bfaecc3c.jpg
-- /assets/images/sina/ddd6b6b3ba96ec2fdc0a399654f99edd.jpg
+- "{{ site.baseurl }}/assets/images/sina/39310800dd3819858abbc11f481ec540.jpg"
+- "{{ site.baseurl }}/assets/images/sina/b5bc104d42e47f29ad3486aee187de01.jpg"
+- "{{ site.baseurl }}/assets/images/sina/936e48990be239165c241b11217765c5.jpg"
+- "{{ site.baseurl }}/assets/images/sina/12426e1b4d14c3738dec1fec0a67f365.jpg"
+- "{{ site.baseurl }}/assets/images/sina/38fdfe04165f32abff476f9458e67b8f.jpg"
+- "{{ site.baseurl }}/assets/images/sina/ca360212266c7b6bd34e34cdbe83e822.jpg"
+- "{{ site.baseurl }}/assets/images/sina/c9243e27e70978ab4689e7f7bfaecc3c.jpg"
+- "{{ site.baseurl }}/assets/images/sina/ddd6b6b3ba96ec2fdc0a399654f99edd.jpg"
 ---
 
 ### 初识日本
@@ -31,7 +31,7 @@ thumbs:
 
 但前文说了，我是个很懒的人，懒的人都是三分钟的热度。虽然《菊与刀》看完了，大致了解了这个矛盾的民族。但日语的学习则是断断续续地，至今也只学习到第10课，单词也只有几百的词汇量，远不足以达到可以交流的目的，这也导致了出国的时候我总是担心沟通的问题，而且事实也如此，基本上每天都会遇到语言不通的尴尬；不过另外方面，也正是这样的尴尬，给了这次旅行更多的谈资，更深一层的味道，更进一步的了解。
 
-![行程](/assets/images/sina/63ad4f7955e93a23b675fd9aee8a178b.jpg)
+![行程]({{ site.baseurl }}/assets/images/sina/63ad4f7955e93a23b675fd9aee8a178b.jpg)
 
 总结了行程前的准备，大概也就是定了机票，定了五日券，定了行程（行程基本上没有多大用处），定了酒店，定了瞎玩的基调。
 
@@ -46,39 +46,39 @@ thumbs:
 
 ### 长崎
 
-![入住地方](/assets/images/sina/eacd3fb146023c65b3c6f10e97015c30.jpg)
+![入住地方]({{ site.baseurl }}/assets/images/sina/eacd3fb146023c65b3c6f10e97015c30.jpg)
 
 到达长崎的时候天已经暗下来了，等出站的时候，已经黑了。我们穿过长崎站前壮观的过街天桥，穿过林立的大约4，5层高的建筑林，就到达我们预定的酒店。入住的交流，没有出现预先想好的日文交流，之前学的日文就像上考场时的状态，完全想不起来了。好在前台的姐姐和我们用简单的英文还算沟通顺畅，很快我们就拿到了房卡。当时我们还没有意识到的是，交流最困难的并不是入住酒店，而是吃饭！
 
-![天桥](/assets/images/sina/bcf8a7134a13d024f4fcd0a957413795.jpg)
+![天桥]({{ site.baseurl }}/assets/images/sina/bcf8a7134a13d024f4fcd0a957413795.jpg)
 
 长崎的第一晚预先准备的是要去稻佐山看长崎的夜景，但蒙蒙的细雨使得这个行程不得不取消。我们草草到站前广场吃逛了一圈，买了份章鱼丸子，味道很不错。这里已经渐渐体会到买东西所带来的语言障碍了，我们看菜单上有多种口味的，并不清楚这些口味代表啥，就随便点了一个，而老板看着我们指着的那个又说了堆日语，我们弄了好久才搞明白说的要哪种口味和要的数量，这一次交流失败的尴尬使得我们对吃饭蒙上了阴影。主餐吃的吉野家，我们认为快餐店应该能避免太多的交流，尽快吃过饭回店休息，结果事与愿违，我要的一份鳗鱼饭有多种口味，多个配料，这些东西我们又你说你的，我说我的过了好一会儿，才最终搞定了，整个店里都是尴尬两个字。不过话说回来，鳗鱼饭真的好吃。
 
-![章鱼丸子](/assets/images/sina/c9103730248d73d292d871810cc9f3b8.jpg)
+![章鱼丸子]({{ site.baseurl }}/assets/images/sina/c9103730248d73d292d871810cc9f3b8.jpg)
 
 是夜埋怨行程的不顺，语言的不通，再加上这个雨带来的雾霭，我们又在心理上对这趟行程的标准降了些许。
 
 因为早早睡觉的缘故，次日早早就醒来了。当天中午就离开长崎去往熊本，我们打算用一早上的时候在长崎逛逛。
 
-![小巷](/assets/images/sina/ca360212266c7b6bd34e34cdbe83e822.jpg)
+![小巷]({{ site.baseurl }}/assets/images/sina/ca360212266c7b6bd34e34cdbe83e822.jpg)
 
 雨已停，多云，微风和煦，能见度出奇的好，远处的港口、船只，再远处的稻佐山都清晰可见，饱和度也高，像极了用色鲜艳的油画。近处的街道，车不算少，却井然有序；人也不算少，街道上却出奇的干净。这是我对日本映像最深的两点映像。长崎也是我行程的三个城市中这两点表现得最突出的城市。
 
-![街](/assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg)
+![街]({{ site.baseurl }}/assets/images/sina/45f6f65cbc307a645f22d5c7ec321ea5.jpg)
 
-![街](/assets/images/sina/838d10585bc164830a51bdebae97c20e.jpg)
+![街]({{ site.baseurl }}/assets/images/sina/838d10585bc164830a51bdebae97c20e.jpg)
 
 
 我们漫步在一个港口岸边，数艘船只泊于其中，固定用的纤绳上，在没入水中的部分已经爬满了贝类生物，浑然与绳融为一体。类似的事情也发生在岸边岩壁，那些贝类坚壳如珊瑚礁般，已经成了堤坝的一部分，或许他们的主人也深爱着这片土地，才想拥抱这片城池。港口接壤大陆这边是连排的餐饮酒吧店，从灯饰和广告牌以及店内外摆设，二层小楼的露天桌椅这些方面来看，在晚上的时候这一块定是热闹非凡，不过现在这里安静祥和，只有在远处一位推着手推车卖一些当地零食的大叔向我们打招呼，试图将我们拉过去好介绍他那引以为豪的商品，我们出于心底对语言障碍的抵触心理，还是点了个头打个招呼，然后摆摆手拒绝了。我们找了个岸边立起的石垛上坐了下来，近处的小船，远处的大船，对岸的山，这一切蔚为壮观。
 
 
-![格沫](/assets/images/sina/81c557576cd29afab2fd46f1cd25645a.jpg)
+![格沫]({{ site.baseurl }}/assets/images/sina/81c557576cd29afab2fd46f1cd25645a.jpg)
 
-![船](/assets/images/sina/a8c8a3c57906d55c77d834fd4774f7a7.jpg)
+![船]({{ site.baseurl }}/assets/images/sina/a8c8a3c57906d55c77d834fd4774f7a7.jpg)
 
 我很喜欢厦门，但我只去过一次，映像完全停留在了那一次美好的旅行经历上。这是一个完美的映像，在我准备不完全的时候我不会轻易再去这个城市，生怕发现那些不好的地方。而此时，这种感觉又一次来临，我喜欢长崎，喜欢这种南方港口城市的慵懒慢节奏，喜欢这里带有浓重日本特色的街道，喜欢这里的人文情怀。但我并不害怕第二次来，我还要再来一次，再来两次，即使他有他的缺点，但心理有个直觉一直在说发现他新的优点肯定能盖过他的缺点，这个优点可能是日本文化的优点，也可能是优美的景色，意外的转角，还可能是令人回味的境遇，令人难忘的经历。
 
-![岸边](/assets/images/sina/e061d22311b919a267df35fc4e3fb401.jpg)
+![岸边]({{ site.baseurl }}/assets/images/sina/e061d22311b919a267df35fc4e3fb401.jpg)
 
 总之，我用一早上喜欢上了这个城，留下我的向往，装上我的期待，眺望再次遇见。
 
@@ -89,61 +89,61 @@ thumbs:
 
 到达熊本的第一映像是：这真的是一个旅游城市啊，JR站里大多数门店都有中文服务，电车站还有专门的多语言说明传单，工作人员也应该是看到了太多的外国游客，对我们这样的说中文夹着英文外带点日文的游客也见怪不怪，问了一句Chinese并看到我们点头之后熟练地从包里抽出一张中文的电车乘用说明。
 
-![福字板](/assets/images/sina/7ba1961b4abe0ddacf523a3afe896d1c.jpg)
+![福字板]({{ site.baseurl }}/assets/images/sina/7ba1961b4abe0ddacf523a3afe896d1c.jpg)
 
 我们住的酒店在下通附近，所以到达后第一天晚上就是在上下通逛街扫货。对于将买化妆品设置为此行目的之一的某人，琳琅满目的商品和比国内便宜的价格，真是让她既开心，又为难啊。
 
 这个城市的时光也注定不是平凡的时光。
 
-![福字条](/assets/images/sina/0905e57b009fd4443b98854270fb7c8a.jpg)
+![福字条]({{ site.baseurl }}/assets/images/sina/0905e57b009fd4443b98854270fb7c8a.jpg)
 
-![神社](/assets/images/sina/4b60e6b9c2805c09ac1e940e5a120591.jpg)
+![神社]({{ site.baseurl }}/assets/images/sina/4b60e6b9c2805c09ac1e940e5a120591.jpg)
 
 
 首先是成趣园。公园见多了，但日本的公园第一次见。树下的长凳，喂几只鸽子；漫步在河边，看着仙鹤与鱼儿，还有在河中石坡上晒太阳的龟；或者是到庙宇边写纸条留愿，寺庙前叩拜祈福；无论哪种都像是生命之外邂逅的美好时光，犹如孩时夏日大雨过后的傍晚，清爽惬意，无忧无虑。水是清的，如山里的泉；不远处小土包上的草皮青得单纯如春初刚发的小芽。神社前圣水长流，时有游客或者是虔诚的人来取水或洗手或饮用。另外一边挂满了祈福的字条和木板，上面有来自各国的语言。这异国他乡的风情竟然产生了些许向往与莫名的归属感，或许这就是日本动画中的场景照进了现实后的感觉吧。
 
-![成趣园](/assets/images/sina/089a1bbb4e698357638e1c5ab2cced95.jpg)
+![成趣园]({{ site.baseurl }}/assets/images/sina/089a1bbb4e698357638e1c5ab2cced95.jpg)
 
-![成趣园](/assets/images/sina/2141771730fa0cb58d2e8868461e9bb4.jpg)
+![成趣园]({{ site.baseurl }}/assets/images/sina/2141771730fa0cb58d2e8868461e9bb4.jpg)
 
 另外的惊喜是熊本城。熊本城虽然大部分地区没有开放，但还是留了一条绕行熊本城的步行之路，另外还有一座可供礼拜的神社。神社做为唯一的正式开放景点，人多自不必说，不管是来参观的，还是来参拜的，都排起了队。我们对此处的神社没有特别的感觉，而且此处也不比成趣园的大，可能会有一些历史的异同，我们也没有准备。倒是修葺中的城楼，在树与树的间隙中显得格外的巍峨。城楼之下都有数层楼高的石基，这也增加了层楼的高度。石基之下目前看到的是青绿草皮，历史上或许是作为护城河使用。远观的城楼多了些许的神秘感，也上升了对其的好感。在很多日本游戏中出现的楼与此多有相似，自然产生了跟成趣园神社一样的感觉，这也让我领悟到了为什么如此多的人乐于胜地巡礼。
 
-![熊本城](/assets/images/sina/0769bca344dbb38b7ce9d7c56250d23d.jpg)
+![熊本城]({{ site.baseurl }}/assets/images/sina/0769bca344dbb38b7ce9d7c56250d23d.jpg)
 
-![熊本城](/assets/images/sina/4848e29838f61e09854ef53cbbbf1f84.jpg)
+![熊本城]({{ site.baseurl }}/assets/images/sina/4848e29838f61e09854ef53cbbbf1f84.jpg)
 
-![熊本城](/assets/images/sina/c66ea7d44f6c78d8fd9016453a97e6bd.jpg)
+![熊本城]({{ site.baseurl }}/assets/images/sina/c66ea7d44f6c78d8fd9016453a97e6bd.jpg)
 
 我们没有赶上部长办公室部长在的时候，但着实领略到了部长的魅力。里面挤了很多人，本身广场也不算大，人一多就显得更挤了。大多人都在等着跟熊本熊雕像合影，在部长坐过的位置上摆出部长常摆的动作拍照。我们也在此感受了现场的氛围，看了周边许多的纪念品，但出于并非部长的忠实粉丝，逛了一会儿，我们就离开了。
 
-![格沫熊本城下](/assets/images/sina/d006474416082b2182326fb648d4b042.jpg)
+![格沫熊本城下]({{ site.baseurl }}/assets/images/sina/d006474416082b2182326fb648d4b042.jpg)
 
 ### 博多
 
 博多对于我这种不了解他的历史的人来说，像及了我对国内现代都市的感受，九州为数不多的国际机场其一福冈机场就位于博多市内不远处。来往如织，络绎不绝的旅人更加把城市发展成了现代化的模样。对于我来说，几个神社、大濠公园就是我行程的全部，而购物、化装品都不属于我的范畴。
 
-![博多](/assets/images/sina/c000d5b8eb512beffacccc3cc00ce5fb.jpg)
+![博多]({{ site.baseurl }}/assets/images/sina/c000d5b8eb512beffacccc3cc00ce5fb.jpg)
 
 咚打鼓节(どんたく)是与博多这个城市不期而遇的一个惊喜。从博多站出来，就发现在站前广场的一侧已经部署了一个大大的露天舞台，台下人山人海，经过的人也大多找位置驻足。我们事先做过攻略，知道有这个节日，但没有想到舞台竟然设置在此处。我们也提着行李在舞台边上观看了一会儿，虽然语言不通，但被主持人的情绪和现场浓郁的节日氛围以及富有地域与文化特色的舞蹈音乐所感染，要离开去酒店办理入住的时候有点依依不舍。
 
-![神社前灯柱](/assets/images/sina/90ef19d21d3741a1b794e3caa8990d5e.jpg)
+![神社前灯柱]({{ site.baseurl }}/assets/images/sina/90ef19d21d3741a1b794e3caa8990d5e.jpg)
 
 在去酒店的路上，我们遇到了几支节日盛装的队伍，其中多以老人和小朋友为主，有些人腰间别着鼓，有些人手上拿着各式的本国乐器。有一支行进的队伍与我们方向一致，我们跟着他们直到他们进入了一家鳗鱼饭店。我们商量反正我们也饿了，不如跟着进去看看，顺便我们也吃个饭。队伍在入口的地方整理了一会儿，像是商量着一会的表演。我们先进来，向服务员点了店里最出名的鳗鱼饭，后来我们才知道这是一家名店，所以菜单上有多国语言，而且菜单都很简单，我们很顺利地搞定了。刚点完饭一会儿，队伍的鼓声就响起来了，随后是手上的乐器，有的是打击的声音，有的是弦乐。队伍领头出现在店入口的位置，接着其他人也跟着进来了。行到大半的时候，店里吃饭的客人也都跟着节奏拍起了手来，浓浓的节日气氛笼罩整个餐厅。整个队伍在店里绕行了两周后才离开，我们的饭也跟着上来了。这像极了国内元宵节舞狮的习俗，舞狮队在游街的时候会不时进入到某些建筑或是店家或是民宅的内部进行表演，预示着给主人带来好运和福气。
 
 下午出去逛的时候，我们才意识到原来像站前广场这样的舞台遍布于博多各地。在市区地区，每走几步就能听到舞台的歌声和主持人的声音，我们琢磨这得多少的人来参与才能有这么大型的节日活动啊。
 
-![博多](/assets/images/sina/321d5da689aad0e68c7979dd40397361.jpg)
+![博多]({{ site.baseurl }}/assets/images/sina/321d5da689aad0e68c7979dd40397361.jpg)
 
 当我们看到了大型游行队伍的时候，已经没有太好的词语来形容我们的惊喜和感动了，也渐渐明白这是一个博多市全民参与的节日盛会。我们渐渐地像本地人一样，找一个能挤进去的地方，坐在路边的马路牙子上，观赏这一场参与人数众多的大型的节日游行。
 
 游行的队伍是在明治通路上，从吳服町路口到天神之间，这是我第二天再去的时候从开头走到了结尾的地方亲自验证的。队伍由多个不同的社团组成，有一些是公司，有一些是机构，某些社团里会有花车，代表他们的品牌或者形像。队伍中的表演者个个都热情满满，满载笑容地与道路两边的我们击掌互动，微笑致意。表演的形式也多种多样，从单纯地喊口号，打节拍，到单人独舞，多人群舞，从青春洋溢到激情摇滚，仿佛这一切都显示了这个民族的热情与认真。
 
 
-![铁道路](/assets/images/sina/405c509e7b6d7f3c2eef05f038eb8c71.jpg)
+![铁道路]({{ site.baseurl }}/assets/images/sina/405c509e7b6d7f3c2eef05f038eb8c71.jpg)
 
 我见过迪士尼的游行，那是我当时见过除了老家祭祀民俗活动游行外最喜欢的游行，我当时震惊于商业游行竟然能做到如此地热情饱满，观众能如此紧密地融入其中。直到今天看到日本街头的游行。不知道如何联系起来，我脑中浮现的是中华民族的中庸之道导致了大部分的商业游行或者舞台表演都过于急功近利，真诚热情的部分没有盖过敷衍的瑕疵，让观众也麻木于一成不变的尴尬。
 
-![博多](/assets/images/sina/a1d01c943f6757287baa73612ea1f297.jpg)
+![博多]({{ site.baseurl }}/assets/images/sina/a1d01c943f6757287baa73612ea1f297.jpg)
 
 ### 后记
 
