--- a/_posts/2019-12-20-luoyang.md
+++ b/_posts/2019-12-20-luoyang.md
@@ -6,58 +6,58 @@ categories:
   - Journey
   - Gallery
 description: 不赶良时，只候时机，匆匆起程，却享悠闲时光。十三朝古都巡游，方知历史沉淀深浅，腊月时光平添惬意。
-image: /assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg
-image-sm: /assets/images/sina/243c3c692777ede30f26f6e9fa89beb5.jpg
+image: "{{ site.baseurl }}/assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg"
+image-sm: "{{ site.baseurl }}/assets/images/sina/243c3c692777ede30f26f6e9fa89beb5.jpg"
 thumbs:
-- /assets/images/sina/f10416b29ee96c6922b675da3f9c712f.jpg
-- /assets/images/sina/0ea962811eba0a2a285c006a0a337fd4.jpg
-- /assets/images/sina/0171ff4b2a4d0ca0a2498c20bc094348.jpg
-- /assets/images/sina/483bceaab483227a6d31e5a88ea10f59.jpg
-- /assets/images/sina/7cb095c2952446bc105249e15f0687e9.jpg
-- /assets/images/sina/1fa26da15494f4d25e434172338bbb9e.jpg
-- /assets/images/sina/08c86eaab3edce71545f93325eea0933.jpg
-- /assets/images/sina/554dfff9006b5f780ae6ce6c018e4c22.jpg
+- "{{ site.baseurl }}/assets/images/sina/f10416b29ee96c6922b675da3f9c712f.jpg"
+- "{{ site.baseurl }}/assets/images/sina/0ea962811eba0a2a285c006a0a337fd4.jpg"
+- "{{ site.baseurl }}/assets/images/sina/0171ff4b2a4d0ca0a2498c20bc094348.jpg"
+- "{{ site.baseurl }}/assets/images/sina/483bceaab483227a6d31e5a88ea10f59.jpg"
+- "{{ site.baseurl }}/assets/images/sina/7cb095c2952446bc105249e15f0687e9.jpg"
+- "{{ site.baseurl }}/assets/images/sina/1fa26da15494f4d25e434172338bbb9e.jpg"
+- "{{ site.baseurl }}/assets/images/sina/08c86eaab3edce71545f93325eea0933.jpg"
+- "{{ site.baseurl }}/assets/images/sina/554dfff9006b5f780ae6ce6c018e4c22.jpg"
 ---
 
-![](/assets/images/sina/bd783d9b5d75cd1087eca9f95c2e2eb6.jpg)
+![]({{ site.baseurl }}/assets/images/sina/bd783d9b5d75cd1087eca9f95c2e2eb6.jpg)
 
 酒店一角
 
-![](/assets/images/sina/85d3aa958f42654eabc1202aab83dac8.jpg)
+![]({{ site.baseurl }}/assets/images/sina/85d3aa958f42654eabc1202aab83dac8.jpg)
 
 
 花桌
 
-![](/assets/images/sina/23d7195a5544f451a36b6c2036a3ea92.jpg)
+![]({{ site.baseurl }}/assets/images/sina/23d7195a5544f451a36b6c2036a3ea92.jpg)
 
 池塘边上，树影柳梢后
 
-![](/assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg)
+![]({{ site.baseurl }}/assets/images/sina/b55e42f5e9680bdf6b334adb3d9518e2.jpg)
 
 十字街
 
-![](/assets/images/sina/51654213a26aa88136325d52a3d8da8b.jpg)
+![]({{ site.baseurl }}/assets/images/sina/51654213a26aa88136325d52a3d8da8b.jpg)
 
 鼓楼
 
-![](/assets/images/sina/5b65da7fc78426a153f2c115a6b8467b.jpg)
+![]({{ site.baseurl }}/assets/images/sina/5b65da7fc78426a153f2c115a6b8467b.jpg)
 
 池边灯光夜景
 
-![](/assets/images/sina/f691ce53f0a43fdc97b28e1935453e55.jpg)
+![]({{ site.baseurl }}/assets/images/sina/f691ce53f0a43fdc97b28e1935453e55.jpg)
 
 香山寺祈福牌
 
-![](/assets/images/sina/a785a569171193622aec6c47f37a194f.jpg)
+![]({{ site.baseurl }}/assets/images/sina/a785a569171193622aec6c47f37a194f.jpg)
 
-![](/assets/images/sina/075c15326f792f14e37d4a10c889e885.jpg)
+![]({{ site.baseurl }}/assets/images/sina/075c15326f792f14e37d4a10c889e885.jpg)
 
 在建城楼
 
-![](/assets/images/sina/ca1457bfe7007fbbc68ea3f84f56445e.jpg)
+![]({{ site.baseurl }}/assets/images/sina/ca1457bfe7007fbbc68ea3f84f56445e.jpg)
 
 三彩骆驼
 
-![](/assets/images/sina/fef1a6239ee0148489648fc6fc9be11f.jpg)
+![]({{ site.baseurl }}/assets/images/sina/fef1a6239ee0148489648fc6fc9be11f.jpg)
 
 龙门石窟
